fix weird spacing issue between anchor links and h1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,14 +119,8 @@ a, a:hover, a:active, button {
 }
 
 #coming-soon {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
+  font-size: 5em;
 }
 
 @media screen and (min-height: 570px) and (min-width: 570px) {
